fix toolbar jumping

--- a/app/assets/stylesheets/editor.css
+++ b/app/assets/stylesheets/editor.css
@@ -110,3 +110,7 @@
   margin:3px 10px 10px;
   width:30%;
 }
+
+div.wk-commands.btn-group {
+  position: relative !important;
+}
